--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Philosopher-Regular';
+  src: url('/fonts/Philosopher-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
